# 8-Puzzle_solver

./: .gitmodules  CMakeLists.txt  README.md
cmake-modules/: FindMEMANCPP.cmake
src/: main.cpp
src/puzzle/: Board.cpp  Board.hpp  BreadthFirstSearch.cpp  BreadthFirstSearch.hpp  FactoryBoard.cpp  FactoryBoard.hpp  Solve.cpp  Solve.hpp
src/puzzle/solve/: Heuristics.cpp  Heuristics.hpp  Local.cpp  Local.hpp  NoInformation.cpp  NoInformation.hpp  WithInformation.cpp  WithInformation.hpp
src/solver/: Table.cpp  Table.hpp
